# handover

./: .gitignore  README.md  TAURI_SETUP.md  gitignore  handover-architecture.md  handover-claude-code-briefing.md  handover-concept.md  handover-courier-architecture.md  handover-courier-concept.md  handover-courier-tracker.md  handover-courier-ui-design.md  handover-fixes-v1.md  handover-tracker.md  handover-ui-design.md  updater_key.key  updater_key.key.pub  updater_key_new.key  updater_key_new.key.pub
.github/workflows/: release.yml
backend/: database.py  generate_license.py  handover-backend.spec  handover.spec  main.py  requirements.txt
backend/models/: courier.py
backend/routers/: auth.py  carriers.py  courier.py  handover.py  license_router.py  outlook_router.py  settings.py  users.py
backend/services/: carrier_detection.py  courier_email.py  courier_parser.py  license_service.py  outlook_router.py  outlook_service.py  pdf_gen.py  pdf_sign.py  printer.py  shipment_grouping.py
backend/templates/: handover.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: main.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: PrinterPickerModal.vue  UPDATER_SETUP.md  UpdateChecker.vue
frontend/src/composables/: useAutoLogout.js
frontend/src/pages/: Archive.vue  CourierArchive.vue  Dashboard.vue  Handover.vue  Login.vue  Settings.vue  SetupWizard.vue  Users.vue
(+14 files in other folders)
